文档的再次微调

--- a/【驴伙伴】接口文档.md
+++ b/【驴伙伴】接口文档.md
@@ -1,9 +1,9 @@
 ﻿# 【驴伙伴】接口文档
 
 > - 当操作错误时，均返回 `{openId: -1}`，所以前端注意错误检测
->
-> - 前端展示消息时，注意从后往前展示（把最近发布消息显示在最前面）
-> - 前端只有一个请求参数时，请求参数直接写在 url 后面
+> - 返回的所有 list 消息，均是按创建时间从大到小排序
+> - 前端只有一个或两个请求参数时，请求参数直接写在 url 后面
+> - 所有消息的创建或更新时间的 unix 时间戳都由后台直接赋值
 
 ## 1. 空闲车 rent
 
@@ -11,7 +11,7 @@
 
   - 前端请求： 在 `onLoad()` 中自动请求该接口
 
-  - 后端返回： 
+  - 后端返回： 只返回 rent:1 的帖子且按创建时间从大到小（即新创建的在最前面）
 
     ```json
     [
@@ -125,7 +125,7 @@
 
   - 前端请求： 在 `onLoad()` 中自动请求该接口
 
-  - 后台返回：
+  - 后台返回：返回有效时间段未过期，status: 1 且按发布时间由大到小排序（即： 新发布的在最前面）
 
     ```json
     [
@@ -145,7 +145,7 @@
                 week //求租周几： 1->周一,2-->周二
                 beginTime //求租的开始时间 hh:mm
                 endTime //求租的结束时间 hh:mm
-                createTime //创建时间（备注： 显示：1小时前，传值：时间戳）
+                createTime //创建时间（备注： 显示：1小时前，传值：unix时间戳）
                 status //0:未接单 1：已接单
                 count //阅读数
             }
@@ -200,6 +200,7 @@
         week //求租周几： 1->周一,2-->周二
         beginTime //求租的开始时间 hh:mm
         endTime //求租的结束时间 hh:mm
+        createTime //创建时间（备注： 显示：1小时前，传值：unix时间戳）
         //发布时，默认为 0
         status //0:未接单 1：已接单
         count //阅读数
@@ -252,7 +253,7 @@
 
   - 前端请求： 在 `onLoad()` 中自动请求该接口
 
-  - 后台返回：
+  - 后台返回：只返回 used:1 的帖子且按创建时间从大到小（即新创建的在最前面）
 
     ```json
     [
@@ -474,54 +475,60 @@
 
     > 当首次添加时，选择图片时，已经自动创建了一条数据，所以会有 rentId
     >
+    > > 当首次添加时，前端注意检测，图片是否已选择，若没有提示添加并拒绝提交
+    > >
+    > > > 检测可通过检测 usedId 或 usedImage 是否有值
+    > >
+    > > 因为，只有当选择图片，才会产生 rentId ，后续的提交才能成功
+    >
     > 请求的端口： `/user/rent/addCar`
     >
     > - 前端请求：
     >
-    >   ```json
-    >   {
-    >       openId
-    >       //file 的 name:"car"
-    >   }
-    >   ```
+    > ```json
+    > {
+    >    openId
+    >    //file 的 name:"car"
+    > }
+    > ```
     >
-    >   案例：
+    > 案例：
     >
-    >   ```js
-    >   changeCar: function() {
-    >       var that = this
-    >       wx.chooseImage({
-    >         count: 1,
-    >         sizeType: ['original'],
-    >         sourceType: ['album'],
-    >         success: function(res) {
-    >           var tempFilePaths = res.tempFilePaths
-    >           wx.uploadFile({
-    >             url: app.serverUrl + '/user/rent/addCar?openId=xxx',
-    >             filePath: tempFilePaths[0],
-    >             name: 'car',
-    >             success: function(res) {
-    >               var data = JSON.parse(res.data)
-    >               console.log(data.carImage)
-    >               that.setData({
-    >                 carImage: app.serverUrl + data.carImage
-    >               })
-    >             }
-    >           })
-    >         },
-    >       })
-    >   }
-    >   ```
+    > ```js
+    > changeCar: function() {
+    >    var that = this
+    >    wx.chooseImage({
+    >      count: 1,
+    >      sizeType: ['original'],
+    >      sourceType: ['album'],
+    >      success: function(res) {
+    >        var tempFilePaths = res.tempFilePaths
+    >        wx.uploadFile({
+    >          url: app.serverUrl + '/user/rent/addCar?openId=xxx',
+    >          filePath: tempFilePaths[0],
+    >          name: 'car',
+    >          success: function(res) {
+    >            var data = JSON.parse(res.data)
+    >            console.log(data.carImage)
+    >            that.setData({
+    >              carImage: app.serverUrl + data.carImage
+    >            })
+    >          }
+    >        })
+    >      },
+    >    })
+    > }
+    > ```
     >
     > - 后台返回：
     >
-    >   ```json
-    >   {
-    >       rentId
-    >       openId
-    >       carImage
-    >   }
-    >   ```
+    > ```json
+    > {
+    >    rentId
+    >    openId
+    >    carImage
+    > }
+    > ```
 
     - 前端请求： 
 
@@ -702,54 +709,60 @@
 
     > 当首次添加时，选择图片时，已经自动创建了一条数据，所以会有 usedId
     >
+    > > 当首次添加时，前端注意检测，图片是否已选择，若没有提示添加并拒绝提交
+    > >
+    > > > 检测可通过检测 usedId 或 usedImage 是否有值
+    > >
+    > > 因为，只有当选择图片，才会产生 usedId，后续的提交才能成功
+    >
     > 请求的端口： `/user/used/addCar`
     >
     > - 前端请求：
     >
-    >   ```json
-    >   {
-    >       openId
-    >       //file 的 name:"car"
-    >   }
-    >   ```
+    > ```json
+    > {
+    >    openId
+    >    //file 的 name:"car"
+    > }
+    > ```
     >
-    >   案例：
+    > 案例：
     >
-    >   ```js
-    >   changeCar: function() {
-    >       var that = this
-    >       wx.chooseImage({
-    >         count: 1,
-    >         sizeType: ['original'],
-    >         sourceType: ['album'],
-    >         success: function(res) {
-    >           var tempFilePaths = res.tempFilePaths
-    >           wx.uploadFile({
-    >             url: app.serverUrl + '/user/used/addCar?openId=xxx',
-    >             filePath: tempFilePaths[0],
-    >             name: 'car',
-    >             success: function(res) {
-    >               var data = JSON.parse(res.data)
-    >               console.log(data.carImage)
-    >               that.setData({
-    >                 carImage: app.serverUrl + data.carImage
-    >               })
-    >             }
-    >           })
-    >         },
-    >       })
-    >   }
-    >   ```
+    > ```js
+    > changeCar: function() {
+    >    var that = this
+    >    wx.chooseImage({
+    >      count: 1,
+    >      sizeType: ['original'],
+    >      sourceType: ['album'],
+    >      success: function(res) {
+    >        var tempFilePaths = res.tempFilePaths
+    >        wx.uploadFile({
+    >          url: app.serverUrl + '/user/used/addCar?openId=xxx',
+    >          filePath: tempFilePaths[0],
+    >          name: 'car',
+    >          success: function(res) {
+    >            var data = JSON.parse(res.data)
+    >            console.log(data.carImage)
+    >            that.setData({
+    >              carImage: app.serverUrl + data.carImage
+    >            })
+    >          }
+    >        })
+    >      },
+    >    })
+    > }
+    > ```
     >
     > - 后台返回：
     >
-    >   ```json
-    >   {
-    >       usedId
-    >       openId
-    >       usedImage
-    >   }
-    >   ```
+    > ```json
+    > {
+    >    usedId
+    >    openId
+    >    usedImage
+    > }
+    > ```
 
     - 前端请求：
 
@@ -767,7 +780,6 @@
           message //发布信息
           used //二手车信息展示 0：未发布 1：发布未出售 2：发布已出售
           money //出手金额 
-          createTime //创建时间（备注： 显示：1小时前，传值：时间戳）
           count //阅读数
       }
       ```
